Changes made to personal,id,employment and business information forms

--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -47,8 +47,7 @@
                     android:layout_marginBottom="@dimen/dimen_20dp"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/margin_15"
-                    android:paddingBottom="@dimen/margin_15">
+                    android:padding="@dimen/margin_15">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -64,7 +63,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <Spinner
@@ -95,14 +94,15 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <EditText
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:gravity="center"
+                            android:background="@android:color/transparent"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <TextView
@@ -141,7 +141,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:layout_margin="6dp"
+                            android:layout_marginEnd="15dp"
                             android:src="@drawable/ic_calendar" />
 
                     </RelativeLayout>
@@ -166,14 +166,17 @@
                             android:text="Front"
                             app:layout_constraintBottom_toTopOf="@id/img_id_front"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="@id/img_id_front"/>
 
                         <ImageView
                             android:id="@+id/img_id_front"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/add_default_image"
-                            app:layout_constraintEnd_toStartOf="@id/img_id_back"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginStart="10dp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/text_view_front" />
 
@@ -182,6 +185,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Back"
+                            app:layout_constraintStart_toStartOf="@id/img_id_back"
                             app:layout_constraintBottom_toTopOf="@id/img_id_back"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -190,10 +194,12 @@
                             android:id="@+id/img_id_back"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/add_default_image"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/img_id_front"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+                            app:layout_constraintTop_toBottomOf="@id/text_view_back" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
