--- a/app/src/main/res/layout/fragment_business_information.xml
+++ b/app/src/main/res/layout/fragment_business_information.xml
@@ -47,8 +47,7 @@
                     android:layout_marginBottom="@dimen/dimen_20dp"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/margin_15"
-                    android:paddingBottom="@dimen/margin_15">
+                    android:padding="@dimen/margin_15">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -64,7 +63,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <EditText
@@ -72,7 +71,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="6dp"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +94,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <EditText
@@ -103,7 +102,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="6dp"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -123,7 +122,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <EditText
@@ -131,7 +130,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="6dp"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -151,7 +150,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <EditText
@@ -159,7 +158,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:background="@android:color/transparent"
-                            android:padding="6dp"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -188,14 +187,17 @@
                             android:text="Registration Cert."
                             app:layout_constraintBottom_toTopOf="@id/img_id_front"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintEnd_toEndOf="@id/img_id_front"/>
 
                         <ImageView
                             android:id="@+id/img_id_front"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
                             android:src="@drawable/add_default_image"
-                            app:layout_constraintEnd_toStartOf="@id/img_id_back"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginStart="10dp"
+                            android:scaleType="centerCrop"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/text_view_front" />
 
@@ -206,16 +208,19 @@
                             android:text="Trade License"
                             app:layout_constraintBottom_toTopOf="@id/img_id_back"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="@id/img_id_back"/>
 
                         <ImageView
                             android:id="@+id/img_id_back"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
                             android:src="@drawable/add_default_image"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="10dp"
+                            android:scaleType="centerCrop"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/img_id_front"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+                            app:layout_constraintTop_toBottomOf="@id/text_view_back" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
