--- a/app/src/main/res/layout/fragment_personal_information.xml
+++ b/app/src/main/res/layout/fragment_personal_information.xml
@@ -47,8 +47,7 @@
                     android:layout_marginBottom="@dimen/dimen_20dp"
                     android:background="@color/white"
                     android:orientation="vertical"
-                    android:paddingTop="@dimen/margin_15"
-                    android:paddingBottom="@dimen/margin_15">
+                    android:padding="@dimen/margin_15">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -63,16 +62,17 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:gravity="center"
                             android:textColor="@android:color/black"
+                            android:background="@android:color/transparent"
                             android:textSize="18sp"
+                            android:padding="12dp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -82,7 +82,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_centerVertical="true"
-                            android:layout_margin="6dp"
+                            android:layout_marginEnd="15dp"
                             android:src="@drawable/ic_calendar" />
 
                     </RelativeLayout>
@@ -101,7 +101,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
-                        android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginTop="5dp"
                         android:background="@drawable/edittext_corner">
 
                         <Spinner
@@ -129,7 +129,7 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_10">
+                        android:layout_marginTop="5dp">
 
                         <LinearLayout
                             android:id="@+id/layout_firstname"
@@ -145,12 +145,12 @@
 
                             <EditText
                                 android:layout_width="match_parent"
-                                android:layout_height="40dp"
+                                android:layout_height="45dp"
                                 android:background="@drawable/edittext_corner"
                                 android:hint="First Name"
                                 android:inputType="text"
-                                android:padding="4dp"
-                                android:textSize="14sp" />
+                                android:padding="12dp"
+                                android:textSize="18sp" />
 
                         </LinearLayout>
 
@@ -168,12 +168,12 @@
 
                             <EditText
                                 android:layout_width="match_parent"
-                                android:layout_height="40dp"
+                                android:layout_height="45dp"
                                 android:background="@drawable/edittext_corner"
                                 android:hint="Last Name"
                                 android:inputType="text"
                                 android:padding="4dp"
-                                android:textSize="14sp" />
+                                android:textSize="18sp" />
 
                         </LinearLayout>
 
@@ -214,7 +214,8 @@
                             android:inputType="phone"
                             android:maxLength="9"
                             android:padding="6dp"
-                            android:textSize="14sp" />
+                            android:hint="4hdh"
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
