--- a/app/src/main/res/layout/fragment_employment_information.xml
+++ b/app/src/main/res/layout/fragment_employment_information.xml
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_20dp"
                     android:layout_marginEnd="@dimen/dimen_20dp"
-                    android:layout_marginBottom="10dp"
+                    android:layout_marginBottom="?actionBarSize"
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_15">
