--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -44,7 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dimen_20dp"
                     android:layout_marginEnd="@dimen/dimen_20dp"
-                    android:layout_marginBottom="@dimen/dimen_20dp"
+                    android:layout_marginBottom="?actionBarSize"
                     android:background="@color/white"
                     android:orientation="vertical"
                     android:padding="@dimen/margin_15">
@@ -129,7 +129,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            android:gravity="center"
+                            android:padding="12dp"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
