Implemented random color selection for username initials

--- a/app/src/main/res/layout/fragment_business_information.xml
+++ b/app/src/main/res/layout/fragment_business_information.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -68,6 +68,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/business_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -99,6 +100,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/business_location"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -127,6 +129,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/registration_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -155,6 +158,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/licence_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -183,39 +187,58 @@
 
                         <TextView
                             android:id="@+id/text_view_front"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/dimen_20dp"
+                            android:layout_marginEnd="@dimen/dimen_20dp"
+                            android:gravity="center"
                             android:text="Registration Cert."
-                            app:layout_constraintBottom_toTopOf="@id/img_id_front"
+                            app:layout_constraintEnd_toStartOf="@+id/guideline9"
+                            app:layout_constraintHorizontal_bias="0.53"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/img_id_front"
+                            android:id="@+id/registration_certificate"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/add_default_image"
-                            app:layout_constraintEnd_toStartOf="@id/img_id_back"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/guideline9"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+                            app:layout_constraintTop_toBottomOf="@+id/text_view_front" />
 
                         <TextView
                             android:id="@+id/text_view_back"
-                            android:layout_width="wrap_content"
+                            android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/dimen_20dp"
+                            android:layout_marginEnd="@dimen/dimen_20dp"
+                            android:gravity="center"
                             android:text="Trade License"
-                            app:layout_constraintBottom_toTopOf="@id/img_id_back"
                             app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0.504"
+                            app:layout_constraintStart_toStartOf="@+id/guideline9"
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
-                            android:id="@+id/img_id_back"
+                            android:id="@+id/trade_license"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/add_default_image"
+                            app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/img_id_front"
-                            app:layout_constraintTop_toBottomOf="@id/text_view_front" />
+                            app:layout_constraintStart_toStartOf="@+id/guideline9"
+                            app:layout_constraintTop_toBottomOf="@+id/text_view_back" />
+
+                        <androidx.constraintlayout.widget.Guideline
+                            android:id="@+id/guideline9"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            app:layout_constraintGuide_percent="0.5" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -227,7 +250,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/previous_button"
+                            android:id="@+id/submit_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
