--- a/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
@@ -457,7 +457,7 @@
                         android:layout_height="30dp"
                         android:layout_gravity="start|center_vertical"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_chevron_left"/>
+                        android:src="@drawable/ic_left_chevron"/>
                     <Button
                         android:id="@+id/btn_previous"
                         android:layout_width="match_parent"
@@ -469,6 +469,7 @@
                         android:text="@string/previous"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
+                        android:textStyle="bold"
                         android:paddingLeft="6dp" />
 
 
@@ -494,6 +495,7 @@
                         android:text="@string/next"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
+                        android:textStyle="bold"
                         android:paddingLeft="30dp"
                         android:paddingRight="4dp" />
 
@@ -502,7 +504,7 @@
                         android:layout_height="30dp"
                         android:layout_gravity="end|center_vertical"
                         android:layout_margin="10dp"
-                        android:src="@drawable/ic_chevron_right">
+                        android:src="@drawable/ic_right_chevron">
 
                     </ImageView>
                 </FrameLayout>
