--- a/app/src/main/res/drawable/rounded_corners_button.xml
+++ b/app/src/main/res/drawable/rounded_corners_button.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <!--<solid android:color="@color/layoutBackgroundLight"/>-->
-    <solid android:color="#3498DB"></solid>
+    <solid android:color="@color/colorPrimary"></solid>
     <corners
         android:radius="25dip"
         />
