--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -10,11 +10,13 @@
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary" />
 
@@ -173,7 +175,7 @@
                             android:id="@+id/img_id_front"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
-                            android:scaleType="centerCrop"
+                            android:scaleType="fitCenter"
                             android:src="@drawable/add_default_image"
                             android:layout_marginTop="10dp"
                             android:layout_marginStart="10dp"
@@ -194,7 +196,7 @@
                             android:id="@+id/img_id_back"
                             android:layout_width="150dp"
                             android:layout_height="120dp"
-                            android:scaleType="centerCrop"
+                            android:scaleType="fitCenter"
                             android:src="@drawable/add_default_image"
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="10dp"
