--- a/app/src/main/res/layout/fragment_wallet_account.xml
+++ b/app/src/main/res/layout/fragment_wallet_account.xml
@@ -534,7 +534,7 @@
                                     android:id="@+id/img_id_front"
                                     android:layout_width="160dp"
                                     android:layout_height="100dp"
-                                    android:scaleType="centerCrop"
+                                    android:scaleType="fitCenter"
                                     android:src="@drawable/add_default_image"
                                     app:layout_constraintStart_toStartOf="parent"
                                     app:layout_constraintTop_toBottomOf="@id/view" />
