--- a/app/src/main/res/layout/fragment_wallet_loans_list.xml
+++ b/app/src/main/res/layout/fragment_wallet_loans_list.xml
@@ -110,14 +110,14 @@
 
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="5dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/loans_list_recycler_view"
-                    android:layout_width="380dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintBottom_toTopOf="parent"
