--- a/app/src/main/res/layout/loan_card.xml
+++ b/app/src/main/res/layout/loan_card.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
+    android:layout_margin="5dp"
+    android:background="@drawable/background_round_white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +15,6 @@
         android:paddingStart="@dimen/dimen_5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:background="@drawable/left_rounded_white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/layout_loan_card2"
@@ -62,7 +62,7 @@
                 android:layout_weight="1"
                 android:alpha="1.0"
                 android:gravity="center_vertical"
-                android:paddingLeft="5dp"
+                android:paddingLeft="2dp"
                 android:text="None"
                 android:textSize="12sp"
                 android:textColor="#929292"
@@ -93,7 +93,7 @@
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:paddingLeft="6dp"
-                android:text="Loan Amount"
+                android:text="Amount"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:textSize="12sp"/>
@@ -106,7 +106,7 @@
                 android:layout_weight="1"
                 android:alpha="1.0"
                 android:gravity="center_vertical"
-                android:paddingLeft="5dp"
+                android:paddingLeft="2dp"
                 android:text="None"
                 android:textSize="12sp"
                 android:textColor="#929292"
@@ -149,14 +149,22 @@
                 android:layout_weight="1"
                 android:alpha="1.0"
                 android:gravity="center_vertical"
-                android:paddingLeft="5dp"
+                android:paddingLeft="2dp"
                 android:text="None"
                 android:textSize="12sp"
                 android:textColor="#929292"
                 android:textStyle="bold" />
         </LinearLayout>
 
-
+        <View
+            android:id="@+id/view"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:background="#31244A"
+            android:alpha=".13"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -169,8 +177,7 @@
         app:layout_constraintStart_toEndOf="@id/layout_loan_card1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/layout_loan_card3"
-        android:background="@drawable/right_rounded_light_blue">
+        app:layout_constraintBottom_toTopOf="@id/layout_loan_card3">
 
 
 
@@ -305,6 +312,18 @@
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <View
+        android:id="@+id/view1"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="#31244A"
+        android:alpha=".13"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintStart_toEndOf="@id/layout_loan_card1"
+        app:layout_constraintTop_toBottomOf="@id/layout_loan_card2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/layout_loan_card3"/>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_loan_card3"
         android:layout_width="0dp"
@@ -315,8 +334,7 @@
         app:layout_constraintStart_toEndOf="@id/layout_loan_card1"
         app:layout_constraintTop_toBottomOf="@id/layout_loan_card2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="#F5D1D8">
+        app:layout_constraintBottom_toBottomOf="parent">
 
 
 
