modified id information

--- a/app/src/main/res/layout/fragment_personal_information.xml
+++ b/app/src/main/res/layout/fragment_personal_information.xml
@@ -232,6 +232,7 @@
                         android:textColor="@color/black" />
 
                     <com.cabral.emaishapay.customs.CircularImageView
+                        android:id="@+id/user_pic"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_gravity="center_horizontal"
@@ -246,7 +247,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/previous_button"
+                            android:id="@+id/submit_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
