--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -67,6 +67,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <Spinner
+                            android:id="@+id/id_type"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -98,6 +99,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <EditText
+                            android:id="@+id/id_number"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -126,6 +128,7 @@
                         android:background="@drawable/edittext_corner">
 
                         <TextView
+                            android:id="@+id/expiry_date_tv"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
@@ -137,6 +140,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <ImageView
+                            android:id="@+id/expiry_date_picker"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
@@ -211,7 +215,7 @@
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/previous_button"
+                            android:id="@+id/submit_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_marginStart="10dp"
