--- a/app/src/main/res/layout/fragment_id_information.xml
+++ b/app/src/main/res/layout/fragment_id_information.xml
@@ -74,7 +74,7 @@
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
                             android:layout_margin="6dp"
-                            android:entries="@array/spinner_gender"
+                            android:entries="@array/spinner_id_type"
                             android:textColor="@android:color/black"
                             android:textSize="18sp"
                             app:layout_constraintBottom_toBottomOf="parent"
